--- a/angular.json
+++ b/angular.json
@@ -59,6 +59,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "ssl": true,
+            "sslKey": "keys/privatekey.pem",
+            "sslCert": "keys/certificate.pem"
+          },
           "configurations": {
             "production": {
               "browserTarget": "frontend:build:production"
