--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,10 @@ dist/
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Angular cache
+/node_modules/
+/dist/
+/aot/
+/out-tsc/
+*.log
